--- a/asyncapi/asgardeo/Ballerina.toml
+++ b/asyncapi/asgardeo/Ballerina.toml
@@ -5,8 +5,8 @@ org = "ballerinax"
 name = "trigger.asgardeo"
 repository = "https://github.com/ballerina-platform/asyncapi-triggers"
 version = "0.1.1"
-distribution = "2201.1.1"
-# icon = "docs/icon.png" // commenting this temporarily, since there is a bug in Ballerina DEV central, can't push modules with icons
+distribution = "2201.1.2"
+icon = "docs/icon.png"
 authors = ["Ballerina"]
 
 [build-options]
